--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
+# Core ML/DL dependencies
 torch>=1.12.0
 transformers>=4.20.0
+
+# Data processing
 pandas>=1.4.0
 numpy>=1.21.0
 scikit-learn>=1.1.0
+
+# Visualization
 matplotlib>=3.5.0
 seaborn>=0.11.0
-plotly>=5.8.0
+
+# Chinese text processing
 jieba>=0.42.1
-captum>=0.5.0
+
+# Web server
+flask>=2.0.0
+flask-cors>=3.0.10
+
+# Optional but recommended
+tqdm>=4.64.0
 datasets>=2.3.0
-wordcloud>=1.8.0
